--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-js
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/dist
+
+# misc
+.env
+
+# package log erros
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# media files
+temp/*
+!temp/.gitkeep
