--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/KZTN/Typescript-Node-Dummy-Project.git"
-	},	
+	},
 	"scripts": {
-		"start": "tsc && node js/app.js",
+		"dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+		"build": "tsc && node dist/app.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start:watch": "nodemon js/app.js",
+		"start:watch": "nodemon dist/app.js",
 		"compile-watch": "sudo yarn tsc --p tsconfig.json -w"
 	},
 	"keywords": [],
@@ -19,6 +20,8 @@
 	"devDependencies": {
 		"@types/express": "^4.17.2",
 		"nodemon": "^2.0.1",
+		"ts-node-dev": "^1.0.0-pre.56",
+		"tsconfig-paths": "^3.9.0",
 		"tslint": "^5.20.1",
 		"typescript": "^3.7.2"
 	},
